[gd_scene load_steps=4 format=3 uid="uid://48c6xygakgpn"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_82ca3"]
[ext_resource type="Texture2D" uid="uid://cxvhqlffbtckh" path="res://resources/graphics/player/player.png" id="1_fp6uj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_80d1n"]
radius = 68.593

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_82ca3")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(0, -38)
texture = ExtResource("1_fp6uj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_80d1n")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserMarkers" type="Node2D" parent="."]

[node name="Marker1" type="Marker2D" parent="LaserMarkers"]
position = Vector2(18, -132)

[node name="Marker2" type="Marker2D" parent="LaserMarkers"]
position = Vector2(27, -130)

[node name="Marker3" type="Marker2D" parent="LaserMarkers"]
position = Vector2(9, -130)

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
